frontend/test/should_fail/inh_attrib_013.grg
using inh_attrib_model_013;

rule r {

	replace {
	}
}

